--- a/src/ChinaTower.StationPlanning/wwwroot/styles/login.css
+++ b/src/ChinaTower.StationPlanning/wwwroot/styles/login.css
@@ -7,7 +7,7 @@ body {
     background: #222526;
     position: relative;
     padding: 100px;
-    font-family: verdana;
+    font-family: "Microsoft YaHei", verdana;
 }
 
 #loginform {
@@ -174,6 +174,25 @@ a {
         transition: 0.5s ease;
     }
 
+.logo {
+    display: inline-block;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.logo-chinatower {
+    color: #fff;
+    font-size: 7em;
+    display: block;
+    margin: 0 auto;
+    height: 112px;
+}
+
+
 #mainlogin {
     float: left;
     width: 250px;
@@ -189,8 +208,9 @@ a {
     color: #fff;
     font-size: 13px;
     text-align: left;
-    font-family: verdana;
+    font-family: "Microsoft YaHei", verdana;
     padding-top: 10px;
+    text-align: center;
 }
 
 #or {
