--- a/src/ChinaTower.StationPlanning/Views/Account/Login.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Account/Login.cshtml
@@ -17,8 +17,8 @@
             <div id="or"></div>
             <h1>登录中国铁塔基站规划系统</h1>
             <div>
-                <input type="text" placeholder="用户名" value="" required>
-                <input type="password" placeholder="密码" value="" required>
+                <input type="text" name="username" placeholder="用户名" value="">
+                <input type="password" name="password" placeholder="密码" value="">
                 <button type="submit"><i class="fa fa-arrow-right"></i></button>
             </div>
             <div id="note">
