--- a/src/ChinaTower.StationPlanning/Views/Home/Index.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Home/Index.cshtml
@@ -1,1 +1,73 @@
-﻿
+﻿@{ 
+    ViewBag.Title = "概览";
+}
+<div class="clearfix">
+    <h4>铁塔信息概览</h4>
+</div>
+<div class="row">
+    <div class="col-lg-8">
+        <section class="panel">
+            <header class="panel-heading">
+                正常 / 预选
+            </header>
+            <div class="sparkline" data-type="line" data-resize="true" data-height="200" data-width="100%" data-line-color="#bfea5f" data-fill-color="#f3fce3" data-highlight-line-color="#e1e5e9" data-spot-radius="5" data-composite-data="@Json.Serialize(((ViewBag.DateStatistics) as IEnumerable<dynamic>).Select(x => x.Normal))" data-composite-line-color="#a3e2fe" data-composite-fill-color="#e3f6ff" data-data="@Json.Serialize(((ViewBag.DateStatistics) as IEnumerable<dynamic>).Select(x => x.Pre))"></div>
+            <ul class="list-inline text-muted axis">
+                @foreach (var x in ViewBag.DateStatistics)
+                { 
+                    <li>@x.Date.ToString("yyyy-MM")</li>
+                }
+            </ul>
+        </section>
+    </div>
+    <div class="col-lg-4">
+        <section class="panel">
+            <header class="panel-heading">铁塔数据统计</header>
+            <div class="text-center">
+                <div class="sparkline inline" data-type="pie" data-height="175" data-slice-colors="['#233445','#3fcf7f','#ff5f5f','#f4c414']">@(ViewBag.Normal),@(ViewBag.Store),@(ViewBag.Hard),@(ViewBag.Pre)</div>
+                <div class="line pull-in"></div>
+                <div class="text-mini">
+                    <i class="fa fa-circle text-info"></i> 正常 @(ViewBag.NormalRatio)%
+                    <i class="fa fa-circle text-success"></i> 储备 @(ViewBag.StoreRatio)%
+                    <i class="fa fa-circle text-danger"></i> 难点 @(ViewBag.HardRatio)%
+                    <i class="fa fa-circle text-warning"></i> 预选 @(ViewBag.PreRatio)%
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6">
+        <section class="panel">
+            <header class="panel-heading bg bg-inverse">
+                运营商
+            </header>
+            <div class="list-group list-group-flush m-t-n">
+                @foreach (var x in ViewBag.ProviderStatistics)
+                {
+                    <a href="#" class="list-group-item">
+                        <i class="icon-chevron-right"></i>
+                        <span class="badge">@x.Count</span>
+                        <i class="icon-ok-sign"></i> @x.Type
+                    </a>
+                }
+            </div>
+        </section>
+    </div>
+    <div class="col-lg-6">
+        <section class="panel">
+            <header class="panel-heading bg bg-inverse">
+                城市
+            </header>
+            <div class="list-group list-group-flush m-t-n">
+                @foreach (var x in ViewBag.CityStatistics)
+                {
+                    <a href="#" class="list-group-item">
+                        <i class="icon-chevron-right"></i>
+                        <span class="badge">@x.Count</span>
+                        <i class="icon-ok-sign"></i> @x.Type
+                    </a>
+                }
+            </div>
+        </section>
+    </div>
+</div>
