--- a/src/ChinaTower.StationPlanning/Views/_ViewImports.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Security.Claims
 @using Microsoft.AspNet.Http
 @using ChinaTower.StationPlanning.Models;
+@using Newtonsoft.Json
 @inject CodeComb.AspNet.Extensions.SmartCookies.SmartCookies Cookies
 @inject CodeComb.AspNet.Extensions.SmartUser.SmartUser<User, string> User
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
