--- a/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
@@ -21,66 +21,23 @@
         <ul class="nav navbar-nav navbar-avatar pull-right">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <span class="hidden-sm-only">Mika Sokeil</span>
+                    <span class="hidden-sm-only">@User.Current.UserName</span>
                     <span class="thumb-small avatar inline"><img src="@Url.Action("Avatar", "Account", new { id = User.Current.Id })" alt="Mika Sokeil" class="img-circle"></span>
                     <b class="caret hidden-sm-only"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#"><span class="badge bg-danger pull-right">3</span>Notifications</a></li>
+                    <li><a asp-action="Setting" asp-controller="Account">设置</a></li>
                     <li class="divider"></li>
-                    <li><a href="docs.html">Help</a></li>
-                    <li><a href="signin.html">Logout</a></li>
+                    <li><a href="$('#frmLogout').submit()">注销</a></li>
                 </ul>
             </li>
         </ul>
+        <form asp-action="Logout" asp-controller="Account" method="post" id="frmLogout"></form>
         <a class="navbar-brand" href="#"><img src="~/images/logo.png" /></a>
-        <button type="button" class="btn btn-link pull-left nav-toggle hidden-lg" data-toggle="class:slide-nav slide-nav-left" data-target="body">
-            <i class="fa-reorder fa fa-lg text-default"></i>
+        <button id="btn-nav" type="button" class="btn btn-link pull-left nav-toggle hidden-lg" data-toggle="class:show" data-target="#nav">
+            <i class="fa fa-reorder fa-lg text-default"></i>
         </button>
-        <ul class="nav navbar-nav hidden-sm">
-            <li><div class="m-t-small"><a class="btn btn-small btn-info" data-toggle="modal" href="#modal"><i class="fa fa-plus"></i> POST</a></div></li>
-            <li class="dropdown shift" data-toggle="shift:appendTo" data-target=".nav-primary .nav">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa-cog fa fa-lg visible-sm visible-sm-inline"></i>Settings <b class="caret hidden-sm-only"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#" data-toggle="class:navbar-fixed" data-target='body'>
-                            Navbar
-                            <span class="text-active">auto</span>
-                            <span class="text">fixed</span>
-                        </a>
-                    </li>
-                    <li class="visible-lg">
-                        <a href="#" data-toggle="class:nav-vertical" data-target="#nav">
-                            Nav
-                            <span class="text-active">vertical</span>
-                            <span class="text">horizontal</span>
-                        </a>
-                    </li>
-                    <li class="divider hidden-sm"></li>
-                    <li class="dropdown-header">Colors</li>
-                    <li>
-                        <a href="#" data-toggle="class:bg bg-black" data-target='.navbar'>
-                            Navbar
-                            <span class="text-active">white</span>
-                            <span class="text">inverse</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" data-toggle="class:bg-light" data-target='#nav'>
-                            Nav
-                            <span class="text-active">inverse</span>
-                            <span class="text">light</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <form class="navbar-form pull-left shift" action="" data-toggle="shift:appendTo" data-target=".nav-primary">
-            <i class="fa fa-search text-muted"></i>
-            <input type="text" class="input-small form-control" placeholder="Search">
-        </form>
+        <ul class="nav navbar-nav hidden-sm"></ul>
     </header>
     <!-- / header -->
     <!-- nav -->
